--- a/projects/templates/project_detail.html
+++ b/projects/templates/project_detail.html
@@ -8,11 +8,11 @@
         <img src="{% static project.image %}" alt="" width="100%">
     </div>
     <div class="col-md-4">
-        <h5>About the project:</h5>
-        <p>{{ project.description }}</p>
+        <h3>About the project:</h3>
+        <p style="font-size: 20px;">{{ project.description }}</p>
         <br>
-        <h5>Technology used:</h5>
-        <p>{{ project.technology }}</p>
+        <h3>Technology used:</h3>
+        <p style="font-size: 20px;">{{ project.technology }}</p>
     </div>
 </div>
 {% endblock %}
